--- a/MERN_3-main/Mern-Ethnus-3-main/index.html
+++ b/MERN_3-main/Mern-Ethnus-3-main/index.html
@@ -88,11 +88,11 @@
           <div class="container-fluid py-5">
             <h1 class="display-5 fw-bold">MERN Tasks</h1>
             <p class="col-md-8 fs-4">
-              Name - Mukesh Kumar Ghosh
+              Name - Pankaj Sunil Patil
                 <br />
-                Roll No. - 21BAI10085
+                Roll No. - 20MIM10113
                 <br />
-                Email - mukesh.ghosh2021@vitbhopal.ac.in
+                Email - pankaj.patil2020@vitbhopal.ac.in
             </p>
             <div class="accordion" id="accordionExample">
               <div class="accordion-item">
@@ -160,7 +160,7 @@
       </div>
 
         <footer class="pt-3 mt-4 text-muted border-top">
-          &copy; 2023   Mukesh - mukesh.ghosh2021@vitbhopal.ac.in
+          &copy; 2023   Pankaj - pankaj.patil2020@vitbhopal.ac.in
         </footer>
       </div>
     </main>
